--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body::before {
+  position: fixed;
+  top: 0;
+  left: 0;
+  content: '';
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.2;
+  z-index: -50;
+  background: no-repeat center / cover url('../../public/bg-body.jpg');
+}
 .retro-shadow {
   box-shadow: 4px 4px 0px #000000;
 }
