--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,18 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body::before {
   position: fixed;
   top: 0;
   left: 0;
-  content: '';
+  content: "";
   display: block;
   width: 100vw;
   height: 100vh;
   opacity: 0.2;
   z-index: -50;
-  background: no-repeat center / cover url('../assets/img/grunge-texture-light-1.jpg');
+  background: no-repeat center / cover
+    url("../assets/img/grunge-texture-light-1.jpg");
 }
 .retro-shadow {
   box-shadow: 4px 4px 0px #000000;
@@ -25,8 +25,8 @@ body::before {
 .retro-card {
   background: #fff;
   border-radius: 1rem;
-  border: .5vmin solid #05060f;
-  box-shadow: .4rem .4rem #05060f;
+  border: 0.5vmin solid #05060f;
+  box-shadow: 0.4rem 0.4rem #05060f;
   overflow: hidden;
 }
 
